# secretshare

./: .gitignore  BUILD  CLEAN  CMAKE  DBUILD  LICENSE  RBUILD  README.md  RESET
assets/: testvector_in.txt
src/: CMakeLists.txt
src/commandline/: CMakeLists.txt  secretshare.cpp  share.cpp
src/examples/: CMakeLists.txt  membuffer.cpp
src/include/: commandline.hpp  fileoperations.hpp  nimbermultable.hpp  secretshare.hpp  secretshareoperations.hpp
src/test/: CMakeLists.txt  test.cpp
